<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:hint="@string/register_username_hint"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/register_password02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_password01"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/register_password01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_username"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/register_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_address"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/register_type_hint"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/register_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_password02"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/register_address_hint"
        android:inputType="textPostalAddress"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/register_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_type"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/register_notes_hint"
        android:inputType="textMultiLine"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_notes"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/register_phoneNumber_hint"
        android:inputType="phone"
        android:textSize="12sp" />

    <Button
        android:id="@+id/register_cancelButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register_okButton"
        android:layout_alignBottom="@+id/register_okButton"
        android:layout_toEndOf="@+id/register_okButton"
        android:layout_toRightOf="@+id/register_okButton"
        android:onClick="cancelButtonClick"
        android:text="@string/register_cancelButton"
        android:textSize="12sp" />

    <Button
        android:id="@+id/register_okButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_phoneNumber"
        android:layout_marginLeft="104dp"
        android:layout_marginStart="104dp"
        android:onClick="okButtonClick"
        android:text="@string/register_okButton"
        android:textSize="12sp" />

</RelativeLayout>