<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lanchuang.wgc.android_wgcwgc_ui.MainActivity" >

    <Button
        android:id="@+id/main_button02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_editText02"
        android:layout_alignRight="@+id/main_editText02"
        android:layout_alignTop="@+id/main_editText01"
        android:layout_centerVertical="true"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"
        android:layout_marginTop="57dp"
        android:text="@string/main_register" />

    <Button
        android:id="@+id/main_button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_editText02"
        android:layout_alignStart="@+id/main_editText02"
        android:layout_alignTop="@+id/main_editText01"
        android:layout_centerVertical="true"
        android:layout_marginLeft="87dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="57dp"
        android:text="@string/main_login" />

    <EditText
        android:id="@+id/main_editText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:drawablePadding="57dp"
        android:drawableTop="@drawable/ic_launcher1"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/main_account_hint"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/main_editText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_editText02"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/main_password_hint"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        android:id="@+id/main_textView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_button01"
        android:layout_marginTop="17dp"
        android:text="@string/main_forget_password"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/main_textView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/main_textView03"
        android:layout_alignBottom="@+id/main_textView03"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toLeftOf="@+id/main_textView03"
        android:layout_toStartOf="@+id/main_textView03"
        android:text="@string/main_Retrieve_account"
        android:textAppearance="?android:attr/textAppearanceSmall" />
        <!--android:layout_marginEnd="10dp"   api17以上能用-->
        <!--  -->

</RelativeLayout>
